# draughts_ai

./: LICENSE  README.md  pyproject.toml  pyproject.toml_1  requirements.txt  setup.py
src/draughts_ai/: lib.py
